completely fixed horizontal scrolling bug

--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,9 @@ h1, h2, h3, h4, h5, h6 {
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    border-bottom: 1px solid rgb(217, 217, 217);
-   -webkit-box-shadow: 0 0px 10px rgb(217, 217, 217);
-           box-shadow: 0 0px 10px rgb(217, 217, 217);
-   background-color: #ffffff;
+   -webkit-box-shadow: 0 0px 10px rgb(210, 210, 210);
+           box-shadow: 0 0px 10px rgb(210, 210, 210);
+   margin-bottom: 40px;
 }
 .header__offer {
    display: -webkit-box;
@@ -191,6 +191,7 @@ h1, h2, h3, h4, h5, h6 {
    border-radius: 20px;
    font-size: 16px;
    padding: 8px;
+   margin-right: 10px;
    cursor: pointer;
 }
 .header__elements .elements__signin:hover {
@@ -211,14 +212,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
-   position: static;
-   width: 70%;
-   height: 100px;
+   position: relative;
+   width: 100%;
+   height: -webkit-fit-content;
+   height: -moz-fit-content;
+   height: fit-content;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    border-top: 1px solid rgb(217, 217, 217);
    background-color: #ffffff;
+   margin-top: 40px;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-align: center;
@@ -268,8 +272,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-   width: 100vw;
-   height: 100vh;
+   width: 100%;
+   height: 100%;
    background-color: #ffffff;
    color: #212020;
    font-size: 16px;
